# CoffeeXP

./: .gitignore  .prettierrc  .prettierrc.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml
api/: .env.example  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
api/.nwave/: des-config.json
api/alembic/: env.py
api/alembic/versions/: 050900ec4a8e_.py  0a6d8f4c7c2b_initial_tables.py  234779818471_.py  3c8cc0d749d8_add_user_id_to_brewing.py  557bcdf840b2_.py  5f81996ffd76_.py  677dfd367f11_add_user_table.py  7d8db3fe188a_.py  b56fdf031dda_.py  fc26978b8874_.py
api/app/: config.py  dependencies.py  main.py
api/app/database/: __init__.py  schemas.py
api/app/domain/: __init__.py  brewing.py  user.py
api/app/entities/: __init__.py
api/app/models/: __init__.py  base_model.py  brewing.py  coffee.py  coffee_brand.py  rating.py  user.py
api/app/repositories/: abstract_repository.py  base_repository.py  brewing_repository.py  user_repository.py
api/app/routes/: auth.py  brewings.py  coffee_brands.py  coffees.py
api/app/schemas/: auth.py  brewing.py  coffee.py  coffee_brand.py
api/app/services/: auth.py  auth_service.py  base_service.py  brewing_service.py  overall_calculator.py
api/app/value-objects/: brewing_characteristics.py  coffee.py
api/tests/: conftest.py  test_dependencies.py
api/tests/factories/: brewing_factory.py  brewings_factory.py  user_factory.py  users_factory.py
api/tests/models/: test_base_model.py  test_brewing.py  test_coffee.py  test_coffee_brand.py  test_rating.py  test_user.py
api/tests/routes/: test_auth.py  (+3 more)
(+91 files in other folders)
